fix: Zero values are not accepting in Icon size, spacing, BG space & radius

--- a/assets/css/unminified/frontend.css
+++ b/assets/css/unminified/frontend.css
@@ -3345,8 +3345,6 @@ body .entry-content .wp-block-latest-posts li {
   background: transparent;
   vertical-align: middle;
   transition: all 0.01s;
-  margin-left: 6px;
-  margin-right: 6px;
   justify-content: center;
   align-items: center;
 }
@@ -3857,6 +3855,10 @@ body.admin-bar.ast-primary-sticky-header-active .ast-mobile-popup-drawer .ast-mo
 }
 
 .ast-header-search .ast-search-menu-icon .search-form .search-field:-ms-input-placeholder {
+  opacity: 0.5;
+}
+
+.ast-header-search .ast-search-menu-icon .search-form .search-field::-ms-input-placeholder {
   opacity: 0.5;
 }
 
