--- a/sass/site/builder/_header.scss
+++ b/sass/site/builder/_header.scss
@@ -272,8 +272,6 @@
 	background: transparent;
 	vertical-align: middle;
 	transition: all 0.01s;
-	margin-left: 6px;
-	margin-right: 6px;
 	justify-content: center;
 	align-items: center;
 	&:hover {
